Fixed vertical spacing of the pages for smaller viewports

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -199,8 +199,12 @@ p {
      font-size: 1rem;
   }
 
+  .page {
+    min-height: 30rem;
+  }
+
   .home {
-    min-height: 20rem;
+    min-height: 35rem;
   }
 
   #Home {
@@ -216,7 +220,7 @@ p {
   }
 
   .contact {
-    max-height: 60rem;
+    max-height: 40rem;
   }
 }
 // ===========================
@@ -252,7 +256,7 @@ p {
   }
 
   .home-text {
-    font-size: 4.1rem;
+    font-size: 5.1rem;
   }
 
   .projects {
@@ -276,4 +280,10 @@ p {
     .navbar-header {
     display: none;
   }
+
+  .home {
+    padding-left: 80px !important;
+    padding-right: 80px !important;
+  }
+
 }
